--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
