--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app",
+    "devStart": "nodemon app"
+  },
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "dotenv": "^16.3.1",
